snapshot-tests/tests/snapshots/parser__newline_literal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ newline_literal:1:5
  │
1 │ a = '
  │     ^ expected `'`
